--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -3,7 +3,7 @@
     align-items: center;
     justify-content: space-between;
     background-color: rgba(63, 208, 237, 0.94);
-    
+    background-color: floralwhite;
     position: sticky;
 
 }
