--- a/src/home.css
+++ b/src/home.css
@@ -1,9 +1,60 @@
-.image{
-    background-image: url("https://www.theclimategroup.org/sites/default/files/styles/hero_header/public/2020-11/contact%20us.jpg?itok=3cmG-DGM");
-    width: 100vw;
-    height: 100vh;
-    background-repeat: no-repeat;
-    background-size: cover;
+.imageSlider{
+    background-image: url("./image/img2.jpg");
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+     background-size: cover;
+    animation: changeImage 10s linear infinite ;
+}
+    
+
+@keyframes changeImage {
+    25%{
+        background-image: url("./image/img2.jpg");
+    }
+    50%{
+        background-image: url("./image/img1.jpg");
+    }
+    75%{
+        background-image: url("./image/img1.jpg");
+    }
+    
+    }
+    
+ button{
+    width: 100px;
+     padding: 10px;
+    display: flex;
+    margin: 5px;
+    background-color:#d4ac61f5;
+    border: 1px solid transparent;
+}
+ button:hover{
+    background-color: deepskyblue;
+}
+.main{
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    
 }
+ #img2:checked ~img{
+    margin-left: 0%;
+ }
+ 
+ #img1:checked ~img{
+    margin-left: -100%;
+ }
+ @media (max-width:500px){
+    .imageSlider{
+      width: 100%;
+    height: 300px;
+    background-size: cover;
+    
+    
+    }
+  }
+  
